<resources>
    <string name="app_name">WBProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_shop">ShopActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Magasins">Magasins</string>
    <string name="title_activity_maps">Map</string>
    <string name="Promotions">Promotions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="action_search">Rechercher</string>
    <string name="Profil">Profil</string>
    <string name="search_title" />
    <string name="nom_de_la_promotion">Nom de la promotion</string>
    <string name="publi_par">Publié par</string>
    <string name="name_publisher">Jean Bon</string>
    <string name="date_de_publication">Date de publication</string>
    <string name="date_publication">13/03/2020</string>
    <string name="heure_publication">10h34</string>
    <string name="nombre_d_articles_disponibles">Nombre d\'articles disponibles</string>
    <string name="number_article_available">4</string>
    <string name="nombre_d_articles_voulu">Nombre d\'articles voulu</string>
    <string name="number_article_choosen">1</string>
    <string name="point_de_rdv">Point de RDV</string>
    <string name="meetingPoint">Dans le hall d\'entrée</string>
    <string name="prix_l_unit">Prix à l\'unité</string>
    <string name="unit_price">1.50€</string>
    <string name="reserver">Réserver</string>
    <string name="promo_texte">20 rouleaux de PQ \n </string>
    <string name="prix_cardview">2,90€</string>
    <string name="user_name">User name</string>
    <string name="changer_mot_de_passe">Changer mot de passe</string>
    <string name="n_moyens_de_paiement">\n Moyens de paiement</string>
    <string name="selectionner_moyen_de_paiment">Selectionner moyen de paiment</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="adresse">adresse</string>
</resources>
