<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.profil.ProfilFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageProf"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:src="@drawable/deb" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_email" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="test@gamil.com" />
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adresse" />

            <EditText
                android:id="@+id/adresse_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="11 rue des fleurs" />
                android:inputType="textPostalAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/datenaissance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_de_naissance" />

            <EditText
                android:id="@+id/datenaissance_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="11/03/2008" />
                android:inputType="date" />

        </LinearLayout>

        <Button
            android:id="@+id/ChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changer_mot_de_passe" />

        <TextView
            android:id="@+id/moyenpaiment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_moyens_de_paiement" />

        <Button
            android:id="@+id/selectmoyenpaiement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectionner_moyen_de_paiment" />

    </LinearLayout>

</FrameLayout>